# ihost

./: .gitignore  CMakeLists.txt  README.md
scripts/: build-deb.sh
src/: main.cpp
